css/main.css
@import "tailwindcss";
@import "./tokens.css";
@source "../_includes/**/*.html";
@source "../index.html";
@source "../thank-you.html";
@source not "../_site/**/*";
@variant js (&:where(.js *));

@layer base, components, utilities;

@layer base {

  html:has(dialog:open),
  html:has([popover]:popover-open) {
    overflow: hidden;
  }

  html {
    interpolate-size: allow-keywords;
  }

  body {
    will-change: background-color, color;
  }

  :focus-visible {
    @apply outline-offset-3 outline-primary-one outline-2;
  }

  :focus:not(:focus-visible) {
    @apply outline-none;
  }

  button,
  [role="button"] {
    cursor: pointer;
  }

  details::details-content {
    @apply block-0 opacity-0 overflow-hidden duration-500 ease-in-out;
    transition: block-size 500ms ease-in-out, opacity 500ms ease-in-out, transform 500ms ease-in-out, content-visibility 500ms ease-in-out allow-discrete;
  }

  details[open]::details-content {
    @apply block-auto opacity-100 transform-none;
  }

  dialog {
    @apply fixed hidden flex-col top-0 left-0 m-0 w-full h-full min-w-screen min-h-dvh text-inherit bg-neutral-three p-8 gap-12 opacity-0 -translate-x-full backdrop:bg-neutral-one backdrop:opacity-70 backdrop:backdrop-blur-sm transition-all duration-1000 ease-in-out transition-discrete [&:popover-open]:flex open:flex [&:popover-open]:translate-x-0 open:translate-x-0 [&:popover-open]:opacity-100 open:opacity-100 open:starting:opacity-0 open:starting:-translate-x-full [&:popover-open]:starting:opacity-0 [&:popover-open]:starting:-translate-x-full;

    transition-property: transform, opacity, display, overlay;
    transition-duration: 1000ms;
    transition-behavior: allow-discrete;
    transition-timing-function: ease-in-out;
  }

  h2,
  h3,
  h4 {
    @apply font-heading text-neutral-nine;
  }

  h2 {
    @apply font-bold text-4xl xs:text-5xl;
  }

  h3 {
    @apply text-lg font-bold sm:text-xl;
  }

  h4 {
    @apply text-lg;
  }

  input,
  textarea,
  select {
    @apply p-2 bg-neutral-six text-neutral-nine border border-solid border-neutral-three rounded-lg cursor-pointer;
  }

  input:hover,
  input[type="checkbox"]:hover,
  input[type="radio"]:hover,
  option:hover,
  select:hover,
  textarea:hover {
    @apply bg-primary-five;
  }

  input:active:not(#search) {
    @apply border-primary-one;
  }

  input[type="checkbox"],
  input[type="radio"] {
    @apply appearance-none bg-neutral-six w-8 min-w-8 h-8 min-h-8 border border-neutral-three transition-all duration-200 cursor-pointer checked:bg-neutral-six checked:border-neutral-three;
  }

  input[type="checkbox"] {
    @apply rounded-md;
  }

  input[type="radio"] {
    @apply rounded-full;
  }

  mark {
    @apply bg-primary-five text-neutral-nine not-italic;
  }

  .paragraph-accent {
    @apply font-p-accent font-bold tracking-wide text-primary-two uppercase;
  }

  .paragraph-md {
    @apply text-lg/[28px];
  }

  .paragraph-lg {
    @apply text-xl;
  }

  section {
    @apply flex flex-col gap-8 px-4 py-12 js:opacity-[0.01] lg:px-8;
  }

  select {
    @apply bg-neutral-five;
  }

  svg {
    @apply h-auto max-h-full fill-current text-primary-one;
  }

}
/* ... */

